fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,7 @@ body {
 
     .header__content button {
         width: 100% !important;
+        margin-right: 0px !important;
     }
 }
 
